--- a/index.html
+++ b/index.html
@@ -968,141 +968,142 @@ html, body {
         </button>
       </div>
     </div>
-  </div>
+</div>
+
 <style>
- .center-wrapper {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 40px 20px; /* Removed top/bottom padding */
+.center-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 40px 20px;
+}
+
+.responsive-element {
+    max-width: 1000px;
+    width: 100%;
+    padding: 0 3rem;
+    display: flex;
+    flex-direction: row;
+    gap: 2.5rem;
+    align-items: center;
+}
+
+.text-content {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.text-content h1 {
+    font-size: 3rem;
+    font-weight: 600;
+    color: #111827;
+    line-height: 1.2;
+}
+
+.text-content p {
+    font-size: 1.25rem;
+    color: #374151;
+    max-width: 600px;
+}
+
+.explore-button {
+    background-color: #059669;
+    color: white;
+    width: 120px;
+    height: 30px;
+    padding: 0 8px;
+    border: none;
+    border-radius: 0.375rem;
+    font-size: 0.75rem;
+    font-weight: 600;
+    cursor: pointer;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+    transition: background-color 0.3s, transform 0.2s, box-shadow 0.3s;
+}
+
+.explore-button:hover {
+    background-color: #047857;
+    transform: translateY(-2px);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+}
+
+.explore-button svg {
+    width: 16px;
+    height: 16px;
+    stroke: white;
+    transition: transform 0.3s ease;
+}
+
+.explore-button:hover svg {
+    transform: translateX(0.25rem);
+}
+
+/* Mobile View */
+@media (max-width: 768px) {
+    .center-wrapper {
+        padding: 1.5rem 1rem;
     }
 
     .responsive-element {
-      max-width: 1000px;
-      width: 100%;
-      padding: 0 3rem; /* Removed top/bottom padding */
-      display: flex;
-      flex-direction: row;
-      gap: 2.5rem;
-      align-items: center;
+        flex-direction: column;
+        padding: 0 1rem;
+        max-width: 100%;
     }
 
     .text-content {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      gap: 0.5rem; /* Reduced gap */
+        gap: 1rem;
     }
 
     .text-content h1 {
-      font-size: 3rem;
-      font-weight: 600;
-      color: #111827;
-      line-height: 1.2;
+        font-size: 1.5rem;
+        line-height: 1.2;
+        max-width: 100%;
     }
 
     .text-content p {
-      font-size: 1.25rem;
-      color: #374151;
-      max-width: 600px;
+        font-size: 1rem;
+        max-width: 100%;
     }
 
     .explore-button {
-      background-color: #059669;
-      color: white;
-      width: 120px;
-      height: 30px;
-      padding: 0 8px;
-      border: none;
-      border-radius: 0.375rem;
-      font-size: 0.75rem;
-      font-weight: 600;
-      cursor: pointer;
-      display: inline-flex;
-      justify-content: center;
-      align-items: center;
-      gap: 0.5rem;
-      transition: background-color 0.3s, transform 0.2s, box-shadow 0.3s;
-    }
-
-    .explore-button:hover {
-      background-color: #047857;
-      transform: translateY(-2px);
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-    }
-
-    .explore-button svg {
-      width: 16px;
-      height: 16px;
-      stroke: white;
-      transition: transform 0.3s ease;
-    }
-
-    .explore-button:hover svg {
-      transform: translateX(0.25rem);
-    }
-
-    /* Mobile View */
-    @media (max-width: 768px) {
-      .center-wrapper {
-        padding: 1.5 1rem; /* Removed top/bottom padding */
-      }
-
-      .responsive-element {
-        flex-direction: column;
-        padding: 0 1rem; /* Removed top/bottom padding */
-        max-width: 100%;
-      }
-
-      .text-content {
-        gap: 1rem; /* Further reduced gap */
-      }
-
-      .text-content h1 {
-        font-size: 1.5rem;
-        line-height: 1.2;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-      }
-
-      .text-content p {
-        font-size: 1rem;
-        max-width: 100%;
-      }
-
-      .explore-button {
         width: 100%;
         height: auto;
         padding: 10px 24px;
         font-size: 0.875rem;
-      }
+    }
 
-      .explore-button svg {
+    .explore-button svg {
         width: 1.25rem;
         height: 1.25rem;
-      }
     }
+}
 
-    /* Extra Small Screens */
-    @media (max-width: 360px) {
-      .text-content h1 {
-        font-size: 1.25rem;
-      }
+/* Extra Small Screens */
+@media (max-width: 360px) {
+    .text-content h1 {
+        font-size: 1.2rem;
+        line-height: 1.2;
+        max-width: 100%;
     }
+}
 
-    /* Accessibility Enhancements */
-    .explore-button:focus {
-      outline: 2px solid #059669;
-      outline-offset: 2px;
-    }
+/* Accessibility Enhancements */
+.explore-button:focus {
+    outline: 2px solid #059669;
+    outline-offset: 2px;
+}
 
-    @media (prefers-reduced-motion: reduce) {
-      .explore-button,
-      .explore-button svg {
+@media (prefers-reduced-motion: reduce) {
+    .explore-button,
+    .explore-button svg {
         transition: none;
-      }
     }
+}
 </style>
 
 
